# facebook-bot

./: .env.example  .gitattributes  .gitignore  Dockerfile  PROJECT_GUIDE_BN.md  README.md  cookies.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
accounts/: account.env.example  accounts.json.example
docs/: FLEET_SCALING.md  GUIDE_BN.md  GUIDE_EN.md  SYSTEM_DESIGN_BN.md  SYSTEM_DESIGN_EN.md
playwright_automation/: __init__.py  account_registry.py  account_session.py  actions.py  agent_brain.py  agent_executor.py  ai_comment.py  bot_core.py  brain.py  browser_profile.py  database.py  facebook_graph.py  facebook_login.py  fleet_status.py  fleet_worker.py  human_behavior.py  mongo_service.py  post_engagement.py  profile_engagement.py  scheduling.py  stealth_config.py  user_agent_rotation.py
scripts/: check_ollama.py  docker_entrypoint.py  docker_entrypoint.sh  docker_fleet_compose.py  fleet_launcher.py  generate_compose_services.py  login_all_from_cookies.py  migrate_cookies_to_registry.py  mongo_diagnose.py  run_agent_brain.py  run_ai_bot.py  run_single_account.py  seed_all_accounts.py  seed_demo_bot.py  send_one_friend.py  set_headless_false.py  setup.bat  start_fleet_docker.bat  start_fleet_docker.sh  stop_fleet_docker.bat  unlock_browser_profile.py  update_cookies_v2.py
